# testTravelWebSiteProject

./: pyproject.toml
pages/: index_page.py  index_page_locators.py
resources/: constants.py
tests/: test_login.py
