[tool.poetry]
name = "testtravelwebsiteproject"
version = "0.1.0"
description = ""
authors = ["dhananjaya2007 <dhananjaya2007@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.11.2"
pytest = "^7.4.0"
junit-xml = "^1.9"
pytest-html = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

